Opened 17 years ago
Closed 16 years ago
#2273 closed bug (fixed)
[runtime_loader] double clicking it leads to problems
Reported by: | diver | Owned by: | axeld |
---|---|---|---|
Priority: | critical | Milestone: | R1 |
Component: | System/Kernel | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
If you double click runtime_loader you will not be able to launch any other app. Also there will be empty items in Team Monitor. Tested in vmware with hrev25683.
Attachments (2)
Change History (8)
by , 17 years ago
Attachment: | team_monitor.png added |
---|
comment:1 by , 17 years ago
Summary: | [runtime_loader] double clicking it leads to proplems → [runtime_loader] double clicking it leads to problems |
---|
comment:2 by , 16 years ago
Component: | System/runtime_loader → System/Kernel |
---|---|
Priority: | normal → high |
It always leads into that panic for me. I've worked around the issue in hrev28310 (definitely not pretty) to make it no alpha-stopper, but it's a VM problem that should be fixed.
comment:4 by , 16 years ago
Note:
See TracTickets
for help on using tickets.
empty items